from .pared import Pared

class ParedBomba(Pared):
    def __init__(self):
        super().__init__()
        self.activa = False

    def entrar(self):
        print("Entrando en una pared bomba")

    def __str__(self):
        return "Soy una pared bomba"
