@startuml laberinto25
!pragma useIntermediatePackages false

class laberinto25.estado_puerta.Abierta {
}
class laberinto25.bicho.Bicho {
  modo: None
  running: None
  poder: None
  vidas: None
  posicion: None
}
class laberinto25.estado_puerta.Cerrada {
}
class laberinto25.contenedor.Contenedor {
  hijos: None
  forma: None
}
class laberinto25.director.Director {
  builder: None
  dict: None
}
class laberinto25.estado_ente.EstadoEnte {
}
class laberinto25.estado_puerta.EstadoPuerta {
}
class laberinto25.forma.Forma {
  orientaciones: None
  num: None
  punto: None
  extent: None
}
class laberinto25.habitacion.Habitacion {
  num: None
  entidades: None
  visitado: None
}
class laberinto25.laberinto_builder.LaberintoBuilder {
  laberinto: None
  juego: None
}
class laberinto25.gui.MazeGUI {
  master: None
  laberinto_file: None
  juego: None
  canvas: None
  ancho: None
  alto: None
  visuales: None
  event_manager: None
  event_listener: None
}
class laberinto25.modo.Modo {
  lock: None
}
class laberinto25.estado_ente.Muerto {
}
class laberinto25.orientacion.Orientacion {
}
class laberinto25.pared.Pared {
}
class laberinto25.pared_bomba.ParedBomba {
  activa: None
}
class laberinto25.ente.Personaje {
  nombre: None
  vidas: None
  juego: None
  poder: None
  logger: None
  lock: None
}
class laberinto25.puerta.Puerta {
  lado1: None
  lado2: None
  visitada: None
  estadoPuerta: None
}
class laberinto25.estado_ente.Vivo {
}
laberinto25.estado_puerta.EstadoPuerta <|-- laberinto25.estado_puerta.Abierta
laberinto25.ente.Ente <|-- laberinto25.bicho.Bicho
laberinto25.estado_puerta.EstadoPuerta <|-- laberinto25.estado_puerta.Cerrada
laberinto25.elemento_mapa.ElementoMapa <|-- laberinto25.contenedor.Contenedor
laberinto25.contenedor.Contenedor <|-- laberinto25.habitacion.Habitacion
laberinto25.estado_ente.EstadoEnte <|-- laberinto25.estado_ente.Muerto
laberinto25.elemento_mapa.ElementoMapa <|-- laberinto25.pared.Pared
laberinto25.pared.Pared <|-- laberinto25.pared_bomba.ParedBomba
laberinto25.ente.Ente <|-- laberinto25.ente.Personaje
laberinto25.elemento_mapa.ElementoMapa <|-- laberinto25.puerta.Puerta
laberinto25.estado_ente.EstadoEnte <|-- laberinto25.estado_ente.Vivo
footer Generated by //py2puml//
@enduml

